Untemplatify
