# openapi.yaml
@@ -18,12 +18,12 @@ openapi: 3.0.3
 info:
   version: 1.0.0
   title: EWS app API
-  description: API to access and configure the app template
+  description: API to access and configure the Exchange app
 externalDocs:
-  description: Find out more about the app template
+  description: Find out more about the Exchange app
   url: https://github.com/eliona-smart-building-assistant/ews-app
 servers:
-  - url: http://template/v1
+  - url: http://ews/v1
 
 tags:
   - name: Configuration
@@ -33,11 +33,6 @@ tags:
 
   - name: Version
     description: API version
-    externalDocs:
-      url: https://github.com/eliona-smart-building-assistant/ews-app
-
-  - name: Customization
-    description: Help to customize Eliona environment
     externalDocs:
       url: https://github.com/eliona-smart-building-assistant/ews-app
 
@@ -158,41 +153,6 @@ paths:
             application/json:
               schema:
                 type: object
-
-  /dashboard-templates/{dashboard-template-name}:
-    get:
-      tags:
-        - Customization
-      summary: Get a full dashboard template
-      description: Delivers a dashboard template which can assigned to users in Eliona
-      externalDocs:
-        description: The API to assign the dashboard to users in Eliona (see post /dashboards endpoint).
-        url: https://github.com/eliona-smart-building-assistant/eliona-api
-      operationId: getDashboardTemplateByName
-      parameters:
-        - name: dashboard-template-name
-          in: path
-          description: Name of the dashboard template
-          required: true
-          schema:
-            type: string
-            example: Template
-        - name: projectId
-          in: query
-          description: Define the project the dashboard should be
-          required: true
-          schema:
-            type: string
-            example: 99
-      responses:
-        "200":
-          description: Successfully returned dashboard template
-          content:
-            application/json:
-              schema:
-                $ref: "https://raw.githubusercontent.com/eliona-smart-building-assistant/eliona-api/main/openapi.yaml#/components/schemas/Dashboard"
-        "404":
-          description: Template name not found
 
 components:
   parameters:
